Implemented send messages endpoint
