# api/client.v1.swagger.yml
@@ -27,6 +27,25 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetHistoryResponse"
 
+  /sendMessage:
+    post:
+      description: Send new message to the chat.
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SendMessageRequest"
+      responses:
+        '200':
+          description: Message created.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SendMessageResponse"
+
 security:
   - bearerAuth: [ ]
 
@@ -51,7 +70,6 @@ components:
 
   schemas:
     # Common.
-
     Error:
       required: [ message, code ]
       properties:
@@ -65,8 +83,47 @@ components:
     ErrorCode:
       type: integer
       description: contains HTTP error codes and specific business logic error codes (the last must be >= 1000).
-      # TODO: Конкретные коды появятся в следующем уроке.
+      enum:
+        - 1000
+        - 1001
+      x-enum-varnames:
+        - ErrorCodeCreateChatError
+        - ErrorCodeCreateProblemError
       minimum: 400
+
+    SendMessageRequest:
+      required: [ messageBody ]
+      properties:
+        messageBody:
+          type: string
+          minLength: 1
+          maxLength: 3000
+
+    SendMessageResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/MessageHeader"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    MessageHeader:
+      required: [ id, createdAt ]
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-type-import:
+            path: "github.com/Slava02/ChatSupport/internal/types"
+        authorId:
+          type: string
+          format: uuid
+          x-go-type: types.UserID
+          x-go-type-import:
+            path: "github.com/Slava02/ChatSupport/internal/types"
+        createdAt:
+          type: string
+          format: date-time
 
     # /getHistory
 
